fixed padding of navbar on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -291,9 +291,7 @@ footer {
     }
 
     nav {
-        .container-fluid {
-            padding: 48px 24px 0 24px !important;
-        }
+        padding: 48px 24px 0 24px !important;
     }
 
     .hero {
